# AutoShorts

./: .gitignore  CLAUDE.md  HANDOFF.md  pyproject.toml
config/: languages.yaml  platforms.yaml  schedule.yaml
docs/openclaw-guide/: README.md  commands.md  daily-operations.md  hooks.md  troubleshooting.md
docs/plans/: 2026-03-25-autoshorts-design.md  2026-03-25-autoshorts-implementation.md
hooks/: daily_report.sh  heartbeat.sh  on_collect_complete.sh  on_edit_complete.sh  on_upload_complete.sh  on_upload_fail.sh  on_validate_fail.sh  on_validate_pass.sh
skills/: autoshorts-monitor.md  autoshorts-operator.md  autoshorts-troubleshoot.md
src/autoshorts/: __init__.py  __main__.py  cli.py
src/autoshorts/collector/: __init__.py  base.py  bilibili.py  douyin.py  kuaishou.py  runner.py  strategy.py  xiaohongshu.py
src/autoshorts/common/: models.py  storage.py
src/autoshorts/editor/: narration.py  runner.py  transforms.py
src/autoshorts/pipeline/: runner.py  state.py
src/autoshorts/translator/: __init__.py  runner.py  subtitle.py  tts.py
src/autoshorts/uploader/: __init__.py  _helpers.py  base.py  facebook.py  instagram.py  scheduler.py  snapchat.py  threads.py  tiktok.py  youtube.py
tests/: test_integration.py
tests/collector/: test_adapters.py  test_base.py  test_strategy.py
tests/editor/: test_transforms.py
tests/pipeline/: test_state.py
tests/translator/: test_runner.py  test_subtitle.py
tests/uploader/: test_scheduler.py  test_uploaders.py
tests/validator/: test_stage1.py  test_stage2.py  test_stage3.py  test_youtube_similarity.py
(+8 files in other folders)
